--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBcacHwKG84dF2jnb9ePgRZjOP_Gl6I8GY</string>
+	<string>AIzaSyA0pCTMq44LeFLu7WblbbLw_Afn8w37MQE</string>
 	<key>GCM_SENDER_ID</key>
-	<string>608162368906</string>
+	<string>639646983859</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.baseflow.baseapp.dev</string>
+	<string>com.baseflow.solarteamtwente</string>
 	<key>PROJECT_ID</key>
-	<string>flutter-base-app-dddee</string>
+	<string>solarteam-twente</string>
 	<key>STORAGE_BUCKET</key>
-	<string>flutter-base-app-dddee.appspot.com</string>
+	<string>solarteam-twente.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:608162368906:ios:d481fb6d7debd325f78c73</string>
+	<string>1:639646983859:ios:b928a46b9c5df79f9af2c6</string>
 </dict>
 </plist>
