--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -41,7 +41,7 @@ jobs:
         run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Format files
-        run: flutter format --set-exit-if-changed .
+        run: dart format --set-exit-if-changed .
 
       - name: Analyze files
         run: flutter analyze --no-fatal-warnings
