--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
-  flutter: ^3.19.6
+  flutter: 3.19.6
 
 dependencies:
   accessibility_tools: ^2.0.0
