--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   shared_preferences: ^2.2.3
   url_launcher: ^6.2.6
 
+dependency_overrides:
+  intl: ^0.18.1
+
 dev_dependencies:
   bloc_test: ^9.1.7
   build_runner: ^2.4.9
