updated to dark and light dir for assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ flutter:
     - .env.stg
     - .env.prod
     - assets/
+    - assets/dark/
+    - assets/light/
     - assets/animations/
 
 flutter_gen:
