Further implement client and data

--- a/.env.dev
+++ b/.env.dev
@@ -18,6 +18,9 @@ BASE_URL=https://randomuser.me/api/
 # URL for the authentication service
 AUTH_URL=https://example.com/auth
 
+# URL for the Solar Team Twente API
+SOLAR_TEAM_TWENTE_API_URL=https://baseflow.solarteam.nl
+
 # Default username and password, used to prefill the login form when running in debug mode
 DEFAULT_USERNAME=dev@baseflow.com
 DEFAULT_PASSWORD=password
