--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@types/eslint__js": "^8.42.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.11.0"
   }
