--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.3.0",
     "globals": "^15.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.11.0"
+    "typescript-eslint": "^7.12.0"
   }
 }
