--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ unlinked_spec.ds
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
-**/android/**/GeneratedPluginRegistrant.java
+*g*/android/**/GeneratedPluginRegistrant.java
 **/android/key.properties
 *.jks
 
@@ -143,5 +143,4 @@ app.*.map.json
 # Injection generated files
 injectable.config.dart
 
-# Node dependency directories
 node_modules/
