--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_map: ^7.0.1
   flutter_map_animations: ^0.7.0
   flutter_map_geojson: ^1.0.8
+  flutter_map_tile_caching: ^9.1.0
   flutter_native_splash: ^2.4.0
   flutter_secure_storage: ^9.0.0
   flutter_web_plugins:
