--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: solar_team_twente # This will be updated to solar_team_twente by Mason
+name: solar_team_twente
 version: 0.0.2
 
 publish_to: 'none'
