added svg package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_map_geojson: ^1.0.8
   flutter_native_splash: ^2.4.0
   flutter_secure_storage: ^9.0.0
+  flutter_svg: ^2.0.10+1
   flutter_web_plugins:
     sdk: flutter
   form_builder_validators: ^11.0.0
