updated ios bundle id and app names

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@
 FLAVOR=development
 
 # Title of the app as it will be displayed on the home screen
-APP_TITLE=[DEV] Solar Team Twente
+APP_TITLE=[DEV] Solar Tracker Twente
 # Unique identifier for the app
-APP_ID=com.baseflow.solarteamtwente.dev
+APP_ID=com.baseflow.solarapp.dev
 
 # Base URL for the API
 BASE_URL=https://randomuser.me/api/
