--- a/ios/Flutter/Dart-Defines-defaults.xcconfig
+++ b/ios/Flutter/Dart-Defines-defaults.xcconfig
@@ -1,2 +1,2 @@
-APP_TITLE=[DEV] SolarTeamTwente
-APP_ID=com.baseflow.solarteamtwente.dev
+APP_TITLE=[DEV] Solar Tracker Twente
+APP_ID=com.baseflow.solarapp.dev
