--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -1,5 +1,5 @@
 source "https://rubygems.org"
 
-gem "cocoapods"
-gem "fastlane"
+gem 'cocoapods', '~> 1.15', '>= 1.15.2'
+gem 'fastlane', '2.219'
 gem "dotenv"
