--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -21,16 +21,24 @@ flutter_native_splash:
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  image: "assets/splash.png"
+  #image: "assets/splash.png"
+
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
   # see the Android 12 section below.
-  branding: "assets/by_baseflow.png"
+  #branding: "assets/by_baseflow.png"
+
+  image_ios: "assets/splash_screen.png"
+  image_dark_ios: "assets/splash_screen_dark.png"
+
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
   #branding_mode: bottom
+
+  # Set the branding padding from the bottom of the screen.  The default value is 0
+  # branding_bottom_padding: 24
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
@@ -53,7 +61,7 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-#    image: "assets/splash.png"
+    #    image: "assets/splash.png"
 
     # Splash screen background color.
     color: "#ffffff"
@@ -62,7 +70,7 @@ flutter_native_splash:
     icon_background_color: "#ffffff"
 
   # The branding property allows you to specify an image used as branding in the splash screen.
-#    branding: "assets/by_baseflow.png"
+  #    branding: "assets/by_baseflow.png"
 
   # The image_dark, color_dark, icon_background_color_dark, and branding_dark set values that
   # apply when the device is in dark mode. If they are not specified, the app will use the
@@ -98,8 +106,10 @@ flutter_native_splash:
   #background_image_web: "assets/background-web.png"
   #background_image_dark_web: "assets/dark-background-web.png"
   #branding_android: assets/brand-android.png
+  #branding_bottom_padding_android: 24
   #branding_dark_android: assets/dart_dark-android.png
   #branding_ios: assets/brand-ios.png
+  #branding_bottom_padding_ios: 24
   #branding_dark_ios: assets/dart_dark-ios.png
   #branding_web: assets/brand-web.gif
   #branding_dark_web: assets/dart_dark-web.gif
@@ -117,7 +127,7 @@ flutter_native_splash:
   # https://developer.apple.com/documentation/uikit/uiview/contentmode): scaleToFill,
   # scaleAspectFit, scaleAspectFill, center, top, bottom, left, right, topLeft, topRight,
   # bottomLeft, or bottomRight.
-  ios_content_mode: scaleAspectFit
+  ios_content_mode: scaleAspectFill
   #
   # web_image_mode can be one of the following modes: center, contain, stretch, and cover.
   web_image_mode: contain
