--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dio: ^5.4.3+1
   dio_cache_interceptor: ^3.5.0
   dio_smart_retry: ^6.0.0
+  dotted_line: ^3.2.2
   equatable: ^2.0.5
   firebase_analytics: ^11.0.1
   firebase_core: ^3.1.0
@@ -56,6 +57,7 @@ dependencies:
   retrofit: ^4.1.0
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
+  slide_countdown: ^1.6.1
   supabase_flutter: ^2.5.3
   url_launcher: ^6.2.6
 
