--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,9 @@ environment:
 dependencies:
   accessibility_tools: ^2.0.0
   awesome_flutter_extensions: ^1.2.0
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.0
   camera: ^0.11.0+1
+  carousel_slider: ^5.0.0
   dio: ^5.4.3+1
   dio_cache_interceptor: ^3.5.0
   dio_smart_retry: ^6.0.0
