--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: solar_team_twente
-version: 1.1.0+7
+version: 1.1.1+8
 
 publish_to: 'none'
 
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_map: ^7.0.2
   flutter_map_animations: ^0.7.0
+  flutter_map_cancellable_tile_provider: ^3.0.2
   flutter_map_geojson: ^1.0.8
   flutter_native_splash: ^2.4.0
   flutter_secure_storage: ^9.0.0
