--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -1,5 +1,10 @@
 source "https://rubygems.org"
 
-gem 'cocoapods', '~> 1.15', '>= 1.15.2'
-gem 'fastlane', '2.219'
+
+gem 'logger'
+gem 'mutex_m'
+gem 'erb'
+gem "abbrev"
 gem "dotenv"
+gem 'cocoapods', '~> 1.15', '>= 1.15.2'
+gem 'fastlane', '~> 2.226'
