analyzer problem fix

--- a/.github/workflows/android_release_prod.yaml
+++ b/.github/workflows/android_release_prod.yaml
@@ -2,12 +2,7 @@
 name: Android Prod Release
 
 # For now only configure the release workflow to run when manually triggered.
-# on: workflow_dispatch
-
-on:
-  push:
-    branches:
-      - fastlane-setup-android
+on: workflow_dispatch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
