--- a/.github/workflows/ios_release_prod.yaml
+++ b/.github/workflows/ios_release_prod.yaml
@@ -85,6 +85,10 @@ jobs:
           channel: "stable"
           cache: true
 
+      - name: Install FlutterFire
+        run: |
+          dart pub global activate flutterfire_cli
+
       - name: Set up SSH key for Fastlane
         uses: webfactory/ssh-agent@v0.9.0
         with:
