--- a/.github/workflows/supabase_stg.yaml
+++ b/.github/workflows/supabase_stg.yaml
@@ -1,4 +1,4 @@
-name: Supabase release (staging)
+name: Supabase Release (Staging)
 
 on:
   push:
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DEV_DB_PASSWORD: ${{ secrets.SUPABASE_STAGING_DB_PASSWORD }}
-      SUPABASE_DEV_PROJECT_ID: ${{ secrets.SUPABASE_STAGING_PROJECT_ID }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
+      SUPABASE_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
@@ -20,23 +20,5 @@ jobs:
         with:
           version: latest
 
-      - run: supabase link --project-ref SUPABASE_STAGING_PROJECT_ID
+      - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
-
-  apply:
-    runs-on: ubuntu-latest
-    env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      TF_VAR_linked_project: ${{ secrets.SUPABASE_STAGING_PROJECT_ID }}
-    defaults:
-      run:
-        working-directory: supabase/remotes
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-
-      - run: terraform init
-      - run: terraform apply -auto-approve -no-color
