--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   flutter_ioc_get_it: ^1.2.1
   flutter_localizations:
     sdk: flutter
-  flutter_map: ^7.0.2
-  flutter_map_animations: ^0.8.0
-  flutter_map_cancellable_tile_provider: ^3.0.2
-  flutter_map_geojson: ^1.0.8
+  flutter_map: ^8.1.1
+  flutter_map_animations: ^0.9.0
+  flutter_map_cancellable_tile_provider: ^3.1.0
+  flutter_map_geojson2: ^1.0.2
   flutter_native_splash: ^2.4.0
   flutter_secure_storage: ^10.0.0-beta.4
   flutter_svg: ^2.0.10+1
@@ -79,7 +79,7 @@ flutter:
     - assets/dark/
     - assets/light/
     - assets/animations/
-    - assets/geojson/full_map.geojson
+    - assets/geojson/
     - assets/icons/
 
 flutter_gen:
